lab1/Test/L1-A-8-96.output
Error Type B at Line 19
Error Type B at Line 32
Error Type B at Line 43
