lab1/Test/L1-A-8-96.cmm
float D_8LePO1OLi 
;
struct t6vEzv {
}BYWbWIP_3TcUN1E , tNteqnggtqyuvyWcEF 

;
struct GmJ2a ;
struct {
  int jqvGnL5_uMZPcyAFN8 [ 998067775 ] = lAMWRbvDKYFqLExlYF2e 
    ;
}aTM ( ) {
  return SNoE4CDyb = kHV55XC1 && j07GD6Oj_cjkcgfOlO 
    != y0W7QgHrwWtCD6 + - ! ix6Sd ( RAxVypzmxtecGhpZ || 
    P <= RVITM * ! g [ JlX5rjihdJS > ! swi ( Ju , VKGFv5XsK6TlA4L 
    < - ( k6eVSiw2MTegJF == QISh0nlJe + ! sMvg63tF01f0KFjr 
    ( CEMsQia || bY6CWrh99SN >= r5L7yNkeXYcKbG [ ZbqH 
    && 1848633842.1197758646 . CPW0NdBYJeS . fEVyexRsyltsKuufkGf 
    ] ) ) ) - - - 852115186 ] / AJMwHE6fbE5 ( ) ) . yQ99v 
    <= * S ;
}
struct WMVVqT2oAn7Vu ;
int ;
int ;
struct {
  int ZGQZTykpWwc ;
  int nuBPYu1or6nt , AOGE0qR4ENLhzdY ;
};
int ;
int Af_xsqEBFDmDw ( int gyM33zvyAhTiHrU , int UMn7JWlnq_9Y 
  ) {
  IOWKkfELictleoA ;
  if ( Ow4aW5dsJ )   if ( Q )   QeOjUcI9iDqNh4cA 168494516 
    ;
else   while ( pIIZ ) {
  }

else   if ( kqdzIuTpiI )   if ( jx2sTs )   jy5fm7oAbWh451QsGWO 
    ;



}
2057168849 